testsuite/bsc.driver/cpp/Cpreprocess_line.bsv.bsc-out.expected
checking package dependencies
compiling Cpreprocess_line.bsv
Error: "more.bsv", line 2, column 13: (T0031)
  The provisos for this expression could not be resolved because there are no
  instances of the form:
    Literal#(Bool)
Error: "Cpreprocess_line.bsv", line 4, column 12: (T0080)
  Type error at the use of the following function:
    False

  The expected return type of the function:
    Int#(32)

  The return type according to the use:
    Bool

